--- a/tests/psTest.html
+++ b/tests/psTest.html
@@ -92,11 +92,10 @@
 	<td></td>
 </tr>
 <tr>
-	<td>assertAlert</td>
-	<td>User signed out.</td>
-	<td></td>
+	<td>waitForText</td>
+	<td>link=login</td>
+	<td>login</td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
