--- a/tests/loginTest.html
+++ b/tests/loginTest.html
@@ -47,11 +47,10 @@
 	<td></td>
 </tr>
 <tr>
-	<td>waitForAlert</td>
-	<td>User signed out.</td>
-	<td></td>
+	<td>waitForText</td>
+	<td>link=login</td>
+	<td>login</td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
